--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "@google/genai": "^1.20.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "zod": "^4.1.9"
   }
 }
